Kubernetes_Scripts/Mongo_Dashboard/emptydir-vol.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: emptydir-ed
spec:
  containers:
  - image: nginx
    name: test-container
    volumeMounts:
    - name: cache-volume
      mountPath: /cache
  volumes:
  - name: cache-volume
    emptyDir: {}
