Kubernetes_Scripts/Mongo_Dashboard/k8s-dashboard.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-dashboard
  namespace: kubernetes-dashboard
spec:
  selector:
    k8s-app: kubernetes-dashboard
  type: LoadBalancer  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30020
